Ensure the line on the origin info bubble extends the full width of the bubble.

This regressed in r444474 which was necessary to adapt the bubble
margins to support Harmony layout (i.e. since margins are no longer a
compile-time constant).

The separator line, however, needs to ignore the margins completely. So
move the bubble margin into the classes doing layout above and below the
separator.

BUG=689574

Review-Url: https://codereview.chromium.org/2686983002
Cr-Commit-Position: refs/heads/master@{#449222}

Former-commit-id: 3b76fcf9516aed2d90a61ae035cfdf2b2a18e08c